--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -127,4 +127,9 @@
     color: rgba(0, 0, 0, .87);
 }
 
+.card-img-none {
+    text-align: center;
+    padding: 40px 0;
+}
+
 /* Custom Card Component */
